--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HALLO WORD</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-	<div>
-		<img src="gambar1.jpg ">
-		<h1>Saya adalah sarjuni </h1>
+	<div id="header">Header</div>
+	<div id="profile-container">
+		<img id="profile-image"src="gambar1.jpg ">
+		<h2 id="profile-name">Saya adalah sarjuni </h2>
 	</div>
 
 </body>
