Penambahan .css dan div footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 	<div id="header">Header</div>
 	<div id="profile-container">
+	<div id="footer">Footer</div>
 		<img id="profile-image"src="gambar1.jpg ">
 		<h2 id="profile-name">Saya adalah sarjuni </h2>
 	</div>
